--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									</a></h2>
 									<p>Cleaning of 9 tables of ecommerce data using Python.</p>
 								</header>
-								<a href="https://github.com/handhaghani/olist-python-cleaning" class="image main"><img src="images/pic01_1.jpg" alt="" /></a>
+								<a href="https://github.com/handhaghani/olist-python-cleaning" class="image main"><img src="images/pic01_x.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/handhaghani/olist-python-cleaning" class="button large">View Project</a></li>
 								</ul>
