--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Data Exploration<br />
-										in SQL</a></h2>
+										<h2><a href="https://github.com/handhaghani/olist-sql-exploration">Data Exploration with SQL<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
+									<a href="https://github.com/handhaghani/olist-sql-exploration" class="image fit"><img src="images/pic02x.jpg" alt="" /></a>
+									<p>Structured SQL analysis of the OLIST e-commerce dataset, covering revenue trends, customer behavior, shipping logistics, payment methods, and product performance. This project simulates real-world business analytics use cases using SQL queries on a cleaned dataset.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/handhaghani/olist-sql-exploration" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
