--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Tableau Projects<br />
+										<h2><a href="tableau.html">Tableau Projects<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="tableau.html" class="image fit"><img src="images/pic03.jpg" alt="Tableau dashboard screenshot" /></a>
 									<p>This holds all of my Tableau dashboards.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="tableau.html" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								
